# sjourd-messenger

./: .gitignore  Cargo.toml  README.md  build.rs
src/: database.rs  docs.rs  main.rs
src/api/: getsetstring.rs  mod.rs  ping.rs  user.rs
src/api/user/: create.rs  mod.rs
